@@ -77,7 +77,7 @@ static int map_if_lk24(int sg_fd, const char * device_name, int rw,
 
 #define MAX_DEV_NAMES 256
 
-static char * version_str = "1.06 20100529 [svn: r159]";
+static char * version_str = "1.06 20100615 [svn: r160]";
 
 
 static struct option long_options[] = {
